--- a/download-standard-en.html
+++ b/download-standard-en.html
@@ -60,47 +60,60 @@
 
     </svg>
 
-    <!-- Slide 1 (#60) -->
-    <section class="slide fade-6 kenBurns">
+
+
+    <!-- Slide 3 (#73) -->
+    <section data-name="slide-3" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
 
-                    <div class="fix-12-12">
-                        <ul class="grid">
-                            <li class="col-6-12 left">
-                                <h1 class="ae-1 fromLeft"><svg style="width:153px;height:35px">
-                                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-                                    </svg></h1>
-                                <p class="ae-3 fromLeft"><span class="opacity-8">Thank you for downloading MiniOS. The download should start shortly. If the download does not start, click </span><a
+                    <div class="fix-11-12">
+                        <ul class="flex reverse">
+                            <li class="col-6-12 left box-73">
+                                <h1 class="ae-2">Design well</h1>
+                                <p class="ae-3"><span class="opacity-8">Thank you for downloading
+                                        MiniOS. The
+                                        download should start shortly. If the download does not start,
+                                        click </span><a
                                         href="https://ftp.minios.dev/current-links/minios-bullseye-xfce-standard-amd64-zstd.iso"
                                         data-auto-download>here</a><span class="opacity-8">.</span></p>
-                                <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
-                                    <li class="selected">Installation from Windows</li>
-                                    <li>Installation from Linux</li>
-                                    <li>Installation using multiple partitions</li>
-                                </ul>
                             </li>
-                            <li class="col-6-12 left ae-5 fromCenter">
-                                <ul class="slider animated margin-top-4" data-slider-id="60-1">
-                                    <li class="selected fromCenter">
-                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
-                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
-                                        </div>
-                                    </li>
-                                    <li class="fromCenter">
-                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-2">
-                                            <img class="wide" src="assets/img/standard1.jpg" alt="Video Thumbnail" />
-                                        </div>
-                                    </li>
-                                    <li class="fromCenter">
-                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-3">
-                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
-                                        </div>
-                                    </li>
-                                </ul>
+                            <li class="col-6-12 left ae-1 fromAbove">
+                                <img class="shiftImage shiftImageVertical image-73" src="assets/img/iphone-73.png"
+                                    width="802" data-action="zoom" alt="iPhone Image" />
                             </li>
                         </ul>
+
+
+                        <div class="fix-11-12">
+                            <ul class="grid fixedSpaces equal left grid-73">
+                                <li class="col-4-12 ae-3">
+                                    <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement">
+                                        <i class="material-icons">youtube</i>
+                                        <h3>HQ photos</h3>
+                                        <p class="tiny opacity-6">Quickly swipe messages to your archive
+                                            or trash.</p>
+                                    </a>
+                                </li>
+                                <li class="col-4-12 ae-4">
+                                    <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement">
+                                        <i class="material-icons">video-youtube</i>
+                                        <h3>Useful components</h3>
+                                        <p class="tiny opacity-6">Scan entire conversations in a
+                                            chat-like view.</p>
+                                    </a>
+                                </li>
+                                <li class="col-4-12 ae-6">
+                                    <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement last">
+                                        <i class="material-icons">video-youtube</i>
+                                        <h3>Best Music</h3>
+                                        <p class="tiny opacity-6">Unforgettable feelings through a
+                                            quality music.</p>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
@@ -108,65 +121,6 @@
         </div>
         <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
     </section>
-
-     <!-- Popup Video -->
-     <div class="popup autoplay" data-popup-id="60-1">
-        <div class="close"><svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-            </svg></div>
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-10-12">
-                        <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U" frameborder="0" webkitallowfullscreen
-                                mozallowfullscreen allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- Popup Video -->
-    <div class="popup autoplay" data-popup-id="60-2">
-        <div class="close"><svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-            </svg></div>
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-10-12">
-                        <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
-                                frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- Popup Video -->
-    <div class="popup autoplay" data-popup-id="60-3">
-        <div class="close"><svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-            </svg></div>
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-10-12">
-                        <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/embed/FVUuWl_Uh7U"
-                                frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script>
         $(function () {
