--- a/download-standard-en.html
+++ b/download-standard-en.html
@@ -63,7 +63,7 @@
 
 
     <!-- Slide 3 (#73) -->
-    <section data-name="slide-3" class="slide fade-6 kenBurns">
+    <section class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
@@ -71,45 +71,39 @@
                     <div class="fix-11-12">
                         <ul class="flex reverse">
                             <li class="col-6-12 left box-73">
-                                <h1 class="ae-2">Design well</h1>
                                 <p class="ae-3"><span class="opacity-8">Thank you for downloading
                                         MiniOS. The
                                         download should start shortly. If the download does not start,
                                         click </span><a
                                         href="https://ftp.minios.dev/current-links/minios-bullseye-xfce-standard-amd64-zstd.iso"
-                                        data-auto-download>here</a><span class="opacity-8">.</span></p>
-                            </li>
-                            <li class="col-6-12 left ae-1 fromAbove">
-                                <img class="shiftImage shiftImageVertical image-73" src="assets/img/iphone-73.png"
-                                    width="802" data-action="zoom" alt="iPhone Image" />
+                                        data-auto-download1>here</a><span class="opacity-8">.</span></p>
                             </li>
                         </ul>
-
 
                         <div class="fix-11-12">
                             <ul class="grid fixedSpaces equal left grid-73">
                                 <li class="col-4-12 ae-3">
                                     <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement">
-                                        <i class="material-icons">youtube</i>
-                                        <h3>HQ photos</h3>
-                                        <p class="tiny opacity-6">Quickly swipe messages to your archive
-                                            or trash.</p>
+                                        <h3>Installation from Windows</h3>
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
+                                        </div>
                                     </a>
                                 </li>
                                 <li class="col-4-12 ae-4">
                                     <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement">
-                                        <i class="material-icons">video-youtube</i>
-                                        <h3>Useful components</h3>
-                                        <p class="tiny opacity-6">Scan entire conversations in a
-                                            chat-like view.</p>
+                                        <h3>Installation from Linux</h3>
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                                            <img class="wide" src="assets/img/maximum1.jpg" alt="Video Thumbnail" />
+                                        </div>
                                     </a>
                                 </li>
                                 <li class="col-4-12 ae-6">
                                     <a href="https://youtu.be/FVUuWl_Uh7U" class="cell-73 rounded equalElement last">
-                                        <i class="material-icons">video-youtube</i>
-                                        <h3>Best Music</h3>
-                                        <p class="tiny opacity-6">Unforgettable feelings through a
-                                            quality music.</p>
+                                        <h3>Complex installation</h3>
+                                        <div class="popupTrigger videoThumbnail shadow rounded" data-popup-id="60-1">
+                                            <img class="wide" src="assets/img/windows.png" alt="Video Thumbnail" />
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
