--- a/download-standard-en.html
+++ b/download-standard-en.html
@@ -60,9 +60,7 @@
 
     </svg>
 
-
-
-    <!-- Slide 3 (#73) -->
+    <!-- Slide 1 (#73) -->
     <section class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -71,15 +69,14 @@
                     <div class="fix-11-12">
                         <ul class="flex reverse">
                             <li class="col-6-12 left box-73">
-                                <p class="ae-3"><span class="opacity-8">Thank you for downloading
-                                        MiniOS. The
-                                        download should start shortly. If the download does not start,
-                                        click </span><a
+                                <p class="ae-3"><span class="opacity-8">Thank you for downloading MiniOS. The download
+                                        should start shortly. If the download does not start, click </span><a
                                         href="https://ftp.minios.dev/current-links/minios-bullseye-xfce-standard-amd64-zstd.iso"
                                         data-auto-download>here</a><span class="opacity-8">.</span></p>
                             </li>
                             <li class="col-6-12">
-                                <img class="ae-4 rounded" width="605" src="assets/img/background/" alt="MiniOS" />
+                                <img class="ae-4 rounded" width="605" src="assets/img/wallpaper-black.jpg"
+                                    alt="MiniOS" />
                             </li>
                         </ul>
 
